--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build and Deploy to Github Pages
 
 on:
   push:
-    branches: [ "master" ]
+    # branches: ["master"]
 
 env:
   CARGO_TERM_COLOR: always
@@ -11,40 +11,42 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Set up cache
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.cargo/.crates.toml
-          ~/.cargo/.crates2.json
-          ~/.cargo/bin/
-          ~/.cargo/registry/index/
-          ~/.cargo/registry/cache/
-          ~/.cargo/git/db/
-          target/
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        sparse-checkout: |
+      - name: Set up cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/.crates.toml
+            ~/.cargo/.crates2.json
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
             jscarrott
-    - name: Install WASM toolchain
-      run: rustup target add wasm32-unknown-unknown
-    - name: Install trunk
-      run: cargo install trunk
-    - name: Build project
-      run: trunk build --release --verbose --public-url ${{ github.event.repository.name }}
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v2
-      with:
-        path: 'dist'
+      - name: Move folder
+        run: mv jscarrott/* .
+      - name: Install WASM toolchain
+        run: rustup target add wasm32-unknown-unknown
+      - name: Install trunk
+        run: cargo install trunk
+      - name: Build project
+        run: trunk build --release --verbose --public-url ${{ github.event.repository.name }}
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: "dist"
   deploy:
     needs: build
 
     # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
+      pages: write # to deploy to Pages
+      id-token: write # to verify the deployment originates from an appropriate source
 
     # Deploy to the github-pages environment
     environment:
@@ -56,4 +58,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
