--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install trunk
         run: cargo install trunk
       - name: Build project
-        run: trunk build --release --verbose --public-url jscarrott.com
+        run: trunk build --release --verbose --public-url https://jscarrott.com
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
